--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta information -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title and stylesheet link -->
     <title>shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="">
-    
+    <!-- Main container -->
     <div class="container">
         <header>
+            <!-- Shopping cart header -->
             <h1>Your Shopping Cart</h1>
             <div class="shopping">
                 <img src="images\shopping.svg">
@@ -19,12 +22,14 @@
         </header>
 
         <div class="list">
-          
+            <!-- Cart item list goes here -->
         </div>
     </div>
+    <!-- Card details -->
     <div class="card">
         <h1>Card</h1>
         <ul class="listCard">
+            <!-- Card item list goes here -->
         </ul>
         <div class="checkOut">
             <div class="total">0</div>
@@ -32,6 +37,7 @@
         </div>
     </div>
 
+    <!-- JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
